# blog

./: 404.html  Cargo.toml  README.md  Trunk.toml  build.rs  index.html
.cargo/: config.toml
.github/workflows/: bak_deploy.yml  deploy.yml  gh-page-deploy.yml
docs/: blog-286a52cbcad8320b.js  blog-286a52cbcad8320b_bg.wasm  blog-87149fb76c4506a9.js  blog-87149fb76c4506a9_bg.wasm  index.html  posts.json  styles-54416c78f4c766c6.css
public/: posts.json  styles.scss
public/posts/: getting-started.md  hello-world.md
src/: lib.rs  types.rs
src/components/: mod.rs  post_card.rs
src/pages/: articles.rs  home.rs  mod.rs
