[package]
name = "blog"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
pulldown-cmark = "0.13.3"
serde_json = "1.0.149"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
gloo-net = "0.7.0"
wasm-bindgen-futures = "0.4.65"

# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
